test/files/neg/plugin-rightafter-terminal/lib/plugins.jar.desired.sha1
4a096491a11759166159b0830f1c112072790782 ?plugins.jar
